--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-feather": "^2.0.10",
     "swr": "^2.1.5",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
     "sass": "^1.62.1"
